Falta terminar funcion linea 92

--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
 
 	<div class="contenedor-lista-posts" id="div-contenedor-lista-posts"></div>
 
+	<div class="contenedor-comentarios-posts" id="div-contenedor-comentarios-posts"></div>
+
+
 	<script src="js\script.js"></script>
 
 </body>
