falta modificar css

--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 
 	<div class="contenedor-lista-posts" id="div-contenedor-lista-posts"></div>
 
+	<div class="contenedor-body-posts" id="div-contenedor-body-posts"></div>
+
 	<div class="contenedor-comentarios-posts" id="div-contenedor-comentarios-posts"></div>
 
 
