modificacion en css para identificar elementos

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 
 <head>
 	<meta charset="utf-8">
+
+	<link rel="stylesheet" type="text/css" href="css/reset.css">
 	<link rel="stylesheet" type="text/css" href="css/styles.css">
 	<title>Protecto Posteos</title>
 </head>
@@ -11,13 +13,19 @@
 
 	<div class="contenedor-botones-usuario" id="div-contenedor-botones-usuario"></div>
 
-	<div class="contenedor-lista-posts" id="div-contenedor-lista-posts"></div>
+	<div class="contenido-completo">
+	
+		<div class="contenedor-lista-posts" id="div-contenedor-lista-posts"></div>
 
-	<div class="contenedor-body-posts" id="div-contenedor-body-posts"></div>
+		<div class="contenido-body-comentarios">
 
-	<div class="contenedor-comentarios-posts" id="div-contenedor-comentarios-posts"></div>
+			<div class="contenedor-body-posts" id="div-contenedor-body-posts"></div>
+		
+			<div class="contenedor-comentarios-posts" id="div-contenedor-comentarios-posts"></div>
+		</div>
+	</div>
 
-
+	<script src="js/ajax.js"></script>
 	<script src="js\script.js"></script>
 
 </body>
